--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
 
     /* Modal */
     .modal {display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.6);justify-content:center;align-items:center;}
-    .modal-content {position:relative;padding:70px 20px 20px 20px;border-radius:16px;max-width:400px;width:90%;transition:0.3s;color:#fff;text-align:center;overflow:hidden;}
+    .modal-content {position:relative;padding:90px 20px 20px;border-radius:16px;max-width:400px;width:90%;transition:0.3s;color:#fff;text-align:center;overflow:visible;}
     .dark-mode .modal-content {background:#2a2a2a;color:#fff;}
     .close-btn {margin-top:15px;padding:8px 14px;border:none;border-radius:8px;background:#2A4D9B;color:#fff;cursor:pointer;}
 
     /* صورة دائرية Pop-Out */
     .profile-pic {
-      width:100px;
-      height:100px;
+      width:110px;
+      height:110px;
       border-radius:50%;
       border:4px solid #fff;
       position:absolute;
-      top:-50px;
+      top:-55px;
       left:50%;
       transform:translateX(-50%);
-      box-shadow:0 4px 15px rgba(0,0,0,0.3);
       object-fit:cover;
+      z-index:2;
     }
 
     /* Progress Bars */
@@ -84,70 +84,30 @@
     .rank-ssvipsilver  { background:linear-gradient(135deg,#cfd8dc,#b0bec5,#90a4ae); color:#000; }
     .rank-ssvipgold    { background:linear-gradient(135deg,#ffd700,#f9a825,#ff6f00); color:#000; }
 
-    /* 🌟 Pulse Glow متدرج لكل مستوى */
-    .rank-beginner #modalWatermark {
-      animation: pulseGray 3s ease-in-out infinite;
-    }
-    @keyframes pulseGray {
-      0%,100% { color:#999; text-shadow:0 0 5px #aaa, 0 0 10px #666; }
-      50% { color:#eee; text-shadow:0 0 15px #fff, 0 0 25px #ccc; }
-    }
+    /* 🌟 Pulse Glow للـ Watermark + Glow Pop-Out للصورة */
+    .rank-beginner #modalWatermark, .rank-beginner .profile-pic { animation: pulseGray 3s ease-in-out infinite; }
+    @keyframes pulseGray { 0%,100% { color:#999; box-shadow:0 0 10px #aaa,0 0 20px #666; } 50% { color:#eee; box-shadow:0 0 20px #fff,0 0 35px #ccc; } }
 
-    .rank-pro #modalWatermark {
-      animation: pulseBlue 3s ease-in-out infinite;
-    }
-    @keyframes pulseBlue {
-      0%,100% { color:#1976d2; text-shadow:0 0 5px #1565c0, 0 0 10px #64b5f6; }
-      50% { color:#64b5f6; text-shadow:0 0 15px #90caf9, 0 0 25px #2196f3; }
-    }
+    .rank-pro #modalWatermark, .rank-pro .profile-pic { animation: pulseBlue 3s ease-in-out infinite; }
+    @keyframes pulseBlue { 0%,100% { color:#1976d2; box-shadow:0 0 10px #1565c0,0 0 20px #1976d2; } 50% { color:#64b5f6; box-shadow:0 0 20px #90caf9,0 0 35px #2196f3; } }
 
-    .rank-vip #modalWatermark {
-      animation: pulseGold 3s ease-in-out infinite;
-    }
-    @keyframes pulseGold {
-      0%,100% { color:#c8a600; text-shadow:0 0 5px #b8860b, 0 0 10px #ffd54f; }
-      50% { color:#ffd700; text-shadow:0 0 15px #fff176, 0 0 30px #ffeb3b; }
-    }
+    .rank-vip #modalWatermark, .rank-vip .profile-pic { animation: pulseGold 3s ease-in-out infinite; }
+    @keyframes pulseGold { 0%,100% { color:#c8a600; box-shadow:0 0 10px #b8860b,0 0 20px #ffd54f; } 50% { color:#ffd700; box-shadow:0 0 20px #ffeb3b,0 0 40px #ffd700; } }
 
-    .rank-vipplus #modalWatermark {
-      animation: pulseBronze 3s ease-in-out infinite;
-    }
-    @keyframes pulseBronze {
-      0%,100% { color:#795548; text-shadow:0 0 5px #5d4037, 0 0 10px #a1887f; }
-      50% { color:#d7ccc8; text-shadow:0 0 15px #efebe9, 0 0 30px #bcaaa4; }
-    }
+    .rank-vipplus #modalWatermark, .rank-vipplus .profile-pic { animation: pulseBronze 3s ease-in-out infinite; }
+    @keyframes pulseBronze { 0%,100% { color:#795548; box-shadow:0 0 10px #5d4037,0 0 20px #795548; } 50% { color:#d7ccc8; box-shadow:0 0 20px #efebe9,0 0 40px #bcaaa4; } }
 
-    .rank-svip #modalWatermark {
-      animation: pulsePurple 3s ease-in-out infinite;
-    }
-    @keyframes pulsePurple {
-      0%,100% { color:#6a1b9a; text-shadow:0 0 5px #4a148c, 0 0 10px #ab47bc; }
-      50% { color:#ba68c8; text-shadow:0 0 15px #ce93d8, 0 0 30px #8e24aa; }
-    }
+    .rank-svip #modalWatermark, .rank-svip .profile-pic { animation: pulsePurple 3s ease-in-out infinite; }
+    @keyframes pulsePurple { 0%,100% { color:#6a1b9a; box-shadow:0 0 10px #4a148c,0 0 20px #6a1b9a; } 50% { color:#ba68c8; box-shadow:0 0 20px #ce93d8,0 0 40px #8e24aa; } }
 
-    .rank-ssvip #modalWatermark {
-      animation: pulseRed 3s ease-in-out infinite;
-    }
-    @keyframes pulseRed {
-      0%,100% { color:#b71c1c; text-shadow:0 0 5px #880e4f, 0 0 10px #e57373; }
-      50% { color:#ef5350; text-shadow:0 0 15px #ef9a9a, 0 0 30px #c62828; }
-    }
+    .rank-ssvip #modalWatermark, .rank-ssvip .profile-pic { animation: pulseRed 3s ease-in-out infinite; }
+    @keyframes pulseRed { 0%,100% { color:#b71c1c; box-shadow:0 0 10px #880e4f,0 0 20px #b71c1c; } 50% { color:#ef5350; box-shadow:0 0 20px #ef9a9a,0 0 40px #c62828; } }
 
-    .rank-ssvipsilver #modalWatermark {
-      animation: pulseSilver 3s ease-in-out infinite;
-    }
-    @keyframes pulseSilver {
-      0%,100% { color:#757575; text-shadow:0 0 5px #b0bec5, 0 0 10px #90a4ae; }
-      50% { color:#e0e0e0; text-shadow:0 0 15px #f5f5f5, 0 0 30px #cfd8dc; }
-    }
+    .rank-ssvipsilver #modalWatermark, .rank-ssvipsilver .profile-pic { animation: pulseSilver 3s ease-in-out infinite; }
+    @keyframes pulseSilver { 0%,100% { color:#757575; box-shadow:0 0 10px #90a4ae,0 0 20px #757575; } 50% { color:#e0e0e0; box-shadow:0 0 20px #eceff1,0 0 40px #cfd8dc; } }
 
-    .rank-ssvipgold #modalWatermark {
-      animation: pulseGoldBadge 3s ease-in-out infinite;
-    }
-    @keyframes pulseGoldBadge {
-      0%,100% { color:#c57f00; text-shadow:0 0 5px #ff8f00, 0 0 10px #ffca28; }
-      50% { color:#ffd600; text-shadow:0 0 15px #ffeb3b, 0 0 30px #ffc107; }
-    }
+    .rank-ssvipgold #modalWatermark, .rank-ssvipgold .profile-pic { animation: pulseGoldBadge 3s ease-in-out infinite; }
+    @keyframes pulseGoldBadge { 0%,100% { color:#c57f00; box-shadow:0 0 10px #ff8f00,0 0 20px #c57f00; } 50% { color:#ffd600; box-shadow:0 0 20px #ffeb3b,0 0 40px #ffc107; } }
   </style>
 </head>
 <body>
@@ -155,7 +115,6 @@
   <div class="banner">🎉 حدث الترقيات 🎉</div>
 
   <div class="container">
-    <!-- جدول الترقيات -->
     <h1>📢 جدول الترقيات</h1>
     <div class="card">
       <table>
@@ -175,7 +134,6 @@
       </table>
     </div>
 
-    <!-- جدول المذيعين -->
     <h1>🎤 جدول المذيعين</h1>
     <input type="text" id="searchInput" placeholder="🔍 ابحث بالاسم / UID / Likee ID">
     <div class="card scroll-table">
@@ -191,7 +149,7 @@
   <!-- Modal -->
   <div class="modal" id="profileModal">
     <div class="modal-content" id="modalCard">
-      <img src="https://via.placeholder.com/100" id="modalImage" class="profile-pic" alt="الصورة">
+      <img src="https://via.placeholder.com/110" id="modalImage" class="profile-pic" alt="الصورة">
       <h2 id="modalName"></h2>
       <p><b>UID:</b> <span id="modalUID"></span></p>
       <p><b>Likee ID:</b> <span id="modalLikee"></span></p>
@@ -256,7 +214,7 @@
           tr.dataset.hours=b.hours;
           tr.dataset.days=b.days;
           tr.dataset.invites=b.invites;
-          tr.dataset.image=b.image || "https://via.placeholder.com/100";
+          tr.dataset.image=b.image || "https://via.placeholder.com/110";
           tr.innerHTML=`<td>${b.name}</td><td>${b.uid}</td><td>${b.likee}</td>`;
           tbody.appendChild(tr);
         });
