--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     body {
       font-family:'Cairo',sans-serif;
       background: linear-gradient(135deg, #d9c3a0, #f5f0e6); /* كافيه + بيج */
-      color:#3e2f2f; /* بني غامق */
-      margin:0;
-      padding:0;
+      color:#3e2f2f;
+      margin:0;padding:0;
       transition:0.3s;
     }
     .dark-mode {
@@ -19,27 +18,20 @@
     }
     .banner {
       background: linear-gradient(135deg, #6f4e37, #cbb994);
-      color:#fff;
-      text-align:center;
+      color:#fff;text-align:center;
       padding:40px 20px;
-      font-size:28px;
-      font-weight:700;
-      position:relative;
-      overflow:hidden;
+      font-size:28px;font-weight:700;
+      position:relative;overflow:hidden;
     }
     .banner::after {
-      content:"";
-      position:absolute;
-      top:0;left:-75%;
+      content:"";position:absolute;top:0;left:-75%;
       width:50%;height:100%;
       background: linear-gradient(120deg, transparent, rgba(255,215,0,0.4), transparent);
       transform: skewX(-25deg);
       animation: shine 4s infinite;
     }
-    @keyframes shine {
-      0% { left:-75%; }
-      100% { left:125%; }
-    }
+    @keyframes shine {0%{left:-75%;}100%{left:125%;}}
+
     .container {padding:20px;}
     h1 {text-align:center;color:#6f4e37;margin:20px 0;}
     .dark-mode h1 {color:#f5f5f5;}
@@ -47,8 +39,7 @@
       background:#fefaf4;
       border-radius:16px;
       box-shadow:0 4px 12px rgba(111,78,55,0.25);
-      padding:15px;
-      margin-bottom:40px;
+      padding:15px;margin-bottom:40px;
       transition:0.3s;
     }
     .dark-mode .card {background:#2a2a2a;color:#fff;}
@@ -65,8 +56,7 @@
     }
     .toggle-btn {
       position:absolute;top:15px;left:15px;
-      padding:8px 14px;
-      border:none;border-radius:8px;
+      padding:8px 14px;border:none;border-radius:8px;
       background:#6f4e37;color:#fff;cursor:pointer;
     }
     .toggle-btn:hover {background:#4a3527;}
@@ -74,10 +64,14 @@
     /* Modal */
     .modal {display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.6);justify-content:center;align-items:center;}
     .modal-content {
-      position:relative;padding:100px 20px 30px;
-      border-radius:16px;max-width:420px;max-height:90vh;
-      overflow-y:auto;width:95%;
-      color:#fff;text-align:center;overflow-x:hidden;
+      position:relative;
+      padding:100px 20px 30px;
+      border-radius:16px;
+      max-width:420px;
+      max-height:90vh;
+      overflow-y:auto;
+      width:95%;text-align:center;
+      overflow-x:hidden;
     }
     .dark-mode .modal-content {background:#2a2a2a;color:#fff;}
     .close-btn {
@@ -90,8 +84,8 @@
 
     /* صورة دائرية Pop-Out */
     .profile-pic {
-      width:120px;height:120px;border-radius:50%;
-      border:5px solid #fff;
+      width:120px;height:120px;
+      border-radius:50%;border:5px solid #fff;
       position:absolute;top:-60px;left:50%;
       transform:translateX(-50%);
       object-fit:cover;z-index:2;
@@ -100,21 +94,22 @@
     /* Progress Bars */
     .progress {
       background:#e6d9c3;
-      border-radius:8px;
-      height:14px;
-      overflow:hidden;
-      margin-bottom:10px;
+      border-radius:8px;height:14px;
+      overflow:hidden;margin-bottom:10px;
     }
     .bar {
       height:100%;
       background:linear-gradient(90deg,#bfa06a,#d4af37,#b8860b); /* دهبي */
     }
-    .label {font-size:14px;margin-bottom:4px;display:block;}
+    .label {
+      font-size:14px;margin-bottom:4px;
+      display:block;color:#d4af37;
+      font-weight:bold;
+    }
 
-    /* ✨ Shine Effect */
+    /* Shine Effect */
     .modal-content::before {
-      content:"";
-      position:absolute;top:0;left:-75%;
+      content:"";position:absolute;top:0;left:-75%;
       width:50%;height:100%;
       background: linear-gradient(120deg, transparent, rgba(255,215,0,0.3), transparent);
       transform: skewX(-25deg);
@@ -127,6 +122,16 @@
       font-family:'Orbitron', sans-serif;
       font-size:20px;font-weight:700;letter-spacing:3px;
     }
+
+    /* 🎨 خلفيات المستويات */
+    .rank-beginner     { background:linear-gradient(135deg,#d7ccc8,#efebe9,#f5f5f5); color:#3e2f2f; }
+    .rank-pro          { background:linear-gradient(135deg,#90caf9,#42a5f5,#0d47a1); }
+    .rank-vip          { background:linear-gradient(135deg,#d4af37,#ffd700,#ffb300); color:#3e2f2f; }
+    .rank-vipplus      { background:linear-gradient(135deg,#8d6e63,#5d4037,#3e2723); }
+    .rank-svip         { background:linear-gradient(135deg,#ab47bc,#8e24aa,#6a1b9a); }
+    .rank-ssvip        { background:linear-gradient(135deg,#ef5350,#d32f2f,#b71c1c); }
+    .rank-ssvipsilver  { background:linear-gradient(135deg,#cfd8dc,#eceff1,#b0bec5); color:#3e2f2f; }
+    .rank-ssvipgold    { background:linear-gradient(135deg,#fdd835,#ffd700,#ffb300); color:#3e2f2f; }
   </style>
 </head>
 <body>
