--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       100% { background-position: 0% 50%; }
     }
     .dark-mode {
-      background: linear-gradient(135deg, #2e2e2e, #1a1a1a) !important;
-      color:#f5f5f5 !important;
+      background: linear-gradient(135deg, #2e2e2e, #1a1a1a);
+      color:#f5f5f5;
     }
     .banner {
       background: rgba(111, 78, 55, 0.85);
@@ -33,17 +33,20 @@
     #particles {
       position:absolute;
       top:0;left:0;width:100%;height:100%;
-      pointer-events:none;z-index:0;
+      pointer-events:none;
+      z-index:0;
     }
     .banner span {position:relative;z-index:1;}
     .container {padding:20px;position:relative;z-index:1;}
     h1 {text-align:center;color:#6f4e37;margin:20px 0;}
     .dark-mode h1 {color:#f5f5f5;}
     .card {
-      background:#fefaf4;border-radius:16px;
+      background:#fefaf4;
+      border-radius:16px;
       box-shadow:0 4px 12px rgba(111,78,55,0.25);
       padding:15px;margin-bottom:40px;
-      transition:0.3s;position:relative;z-index:1;
+      transition:0.3s;
+      position:relative;z-index:1;
     }
     .dark-mode .card {background:#2a2a2a;color:#fff;}
     table {width:100%;border-collapse:collapse;}
@@ -93,9 +96,20 @@
     }
 
     /* Progress Bars */
-    .progress {background:#e6d9c3;border-radius:8px;height:14px;overflow:hidden;margin-bottom:10px;}
-    .bar {height:100%;background:linear-gradient(90deg,#bfa06a,#d4af37,#b8860b);}
-    .label {font-size:14px;margin-bottom:4px;display:block;color:#d4af37;font-weight:bold;}
+    .progress {
+      background:#e6d9c3;
+      border-radius:8px;height:14px;
+      overflow:hidden;margin-bottom:10px;
+    }
+    .bar {
+      height:100%;
+      background:linear-gradient(90deg,#bfa06a,#d4af37,#b8860b);
+    }
+    .label {
+      font-size:14px;margin-bottom:4px;
+      display:block;color:#d4af37;
+      font-weight:bold;
+    }
 
     /* Watermark */
     .watermark-badge {
@@ -103,6 +117,16 @@
       font-family:'Orbitron', sans-serif;
       font-size:20px;font-weight:700;letter-spacing:3px;
     }
+
+    /* 🎨 خلفيات المستويات */
+    .rank-beginner     { background:linear-gradient(135deg,#d7ccc8,#efebe9,#f5f5f5); color:#3e2f2f; }
+    .rank-pro          { background:linear-gradient(135deg,#90caf9,#42a5f5,#0d47a1); }
+    .rank-vip          { background:linear-gradient(135deg,#d4af37,#ffd700,#ffb300); color:#3e2f2f; }
+    .rank-vipplus      { background:linear-gradient(135deg,#8d6e63,#5d4037,#3e2723); }
+    .rank-svip         { background:linear-gradient(135deg,#ab47bc,#8e24aa,#6a1b9a); }
+    .rank-ssvip        { background:linear-gradient(135deg,#ef5350,#d32f2f,#b71c1c); }
+    .rank-ssvipsilver  { background:linear-gradient(135deg,#cfd8dc,#eceff1,#b0bec5); color:#3e2f2f; }
+    .rank-ssvipgold    { background:linear-gradient(135deg,#fdd835,#ffd700,#ffb300); color:#3e2f2f; }
   </style>
 </head>
 <body>
@@ -199,27 +223,9 @@
       }
     }
 
-    // الوضع الليلي التلقائي + التخزين
-    if(localStorage.getItem("theme") === "dark"){
-      document.body.classList.add("dark-mode");
-    } else if(localStorage.getItem("theme") === "light"){
-      document.body.classList.remove("dark-mode");
-    } else {
-      if(window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches){
-        document.body.classList.add("dark-mode");
-      }
-    }
+    function toggleDarkMode(){ document.body.classList.toggle("dark-mode"); }
 
-    function toggleDarkMode(){ 
-      document.body.classList.toggle("dark-mode"); 
-      if(document.body.classList.contains("dark-mode")){
-        localStorage.setItem("theme","dark");
-      } else {
-        localStorage.setItem("theme","light");
-      }
-    }
-
-    // تحميل المذيعين
+    // تحميل جدول المذيعين
     fetch("broadcasters.json?nocache=" + Date.now())
       .then(res=>res.json())
       .then(data=>{
@@ -305,16 +311,21 @@
     const ctx=canvas.getContext("2d");
     function resizeCanvas(){canvas.width=window.innerWidth;canvas.height=document.querySelector(".banner").offsetHeight;}
     resizeCanvas();window.addEventListener("resize",resizeCanvas);
+
     let stars=[];
     for(let i=0;i<40;i++){
       stars.push({x:Math.random()*canvas.width,y:Math.random()*canvas.height,radius:Math.random()*2,speed:0.2+Math.random()*0.3});
     }
+
     function animateStars(){
       ctx.clearRect(0,0,canvas.width,canvas.height);
       ctx.fillStyle="rgba(255,223,0,0.8)";
       stars.forEach(s=>{
-        ctx.beginPath();ctx.arc(s.x,s.y,s.radius,0,Math.PI*2);ctx.fill();
-        s.y+=s.speed;if(s.y>canvas.height){s.y=0;s.x=Math.random()*canvas.width;}
+        ctx.beginPath();
+        ctx.arc(s.x,s.y,s.radius,0,Math.PI*2);
+        ctx.fill();
+        s.y+=s.speed;
+        if(s.y>canvas.height){s.y=0;s.x=Math.random()*canvas.width;}
       });
       requestAnimationFrame(animateStars);
     }
